--- a/shoppingmall/index.html
+++ b/shoppingmall/index.html
@@ -3,8 +3,11 @@
     <head>
         <title>home</title>
         <style>
+            body {
+                margin: 0;
+            }
             #container {
-                width: 100%;
+                width: 99.7%;
                 height: 100%;
                 margin: 0;
             }
@@ -51,13 +54,16 @@
                 margin-top: 0;
                 clear: both;
             }
+            iframe {
+                border: 0;
+            }
         </style>
     </head>
     <body>
         <div id="container">
             <div id="header">
-                    <h1>김요한</h1>
-            </div>
+                <h1>마카롱</h1>
+            </div>  
             <div id="nav">
                   <ul type="none">
                     <li>회원가입</li>
